--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,21 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+# Credentials & Secrets
+.env
+*.key
+secrets.toml
+
+# Streamlit local config
+.streamlit/config.toml
+.streamlit/secrets.toml
+
+# Python environment
+venv/
+env/
+__pycache__/
+*.py[cod]
+
+# OS files
+.DS_Store
+Thumbs.db
